--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,27 @@ chardet==3.0.4
 ecdsa==0.13
 Events==0.3
 feedparser==5.2.1
+funcy==1.10.3
+future==0.16.0
 graphenelib==0.6.9
 idna==2.7
+langdetect==1.0.7
+prettytable==0.7.2
+pycrypto==2.6.1
 pycryptodome==3.6.6
 pycryptodomex==3.6.6
 pylibscrypt==1.7.1
 requests==2.19.1
 scrypt==0.8.6
 six==1.11.0
+steem==1.0.1
 steem-connect==0.7.3
 steempy==0.19.2
 tomd==0.1.3
+toolz==0.9.0
+ujson==1.35
 urllib3==1.23
+voluptuous==0.11.5
+w3lib==1.19.0
 websocket-client==0.52.0
 websockets==6.0
